Tweaked index container to remove side scroll

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,3 @@
-
 <div class="jumbotron index_jumbo">
     <div class="container">
         <div class="page-header">
@@ -10,174 +9,175 @@
         </div>
     </div>
 </div>
+<div class="container-fluid">
+    <a href="#bodyDiv-anchor"><span class="glyphicon glyphicon-chevron-down" id="jumbo_down"></span></a>
+    <div id="bodyDiv-anchor"></div>
+    <div class="container" id="bodyDiv" data-controller="index" data-action="{{user.role}}">
+        <div class="row header-row">
+            <div class="col-md-11 indexSectionHeader-col">
+                <div class="indexSectionHeader">
+                    <h2>Newest Organizations</h2>
+                </div>
+            </div>
+            <div class="col-md-1 slide-controls-col">
+                <div class="slide-controls">
+                    <a data-slide="prev" href="#newestCarousel" class="left"><span class="glyphicon glyphicon-chevron-left carousel_control"></span></a>
+                    <a data-slide="next" href="#newestCarousel" class="right"><span class="glyphicon glyphicon-chevron-right carousel_control"></span></a>
+                </div>
 
-<a href="#bodyDiv-anchor"><span class="glyphicon glyphicon-chevron-down" id="jumbo_down"></span></a>
-<div id="bodyDiv-anchor"></div>
-<div class="container" id="bodyDiv" data-controller="index" data-action="{{user.role}}">
-    <div class="row header-row">
-        <div class="col-md-11 indexSectionHeader-col">
-            <div class="indexSectionHeader">
-                <h2>Newest Organizations</h2>
             </div>
         </div>
-        <div class="col-md-1 slide-controls-col">
-            <div class="slide-controls">
-                <a data-slide="prev" href="#newestCarousel" class="left"><span class="glyphicon glyphicon-chevron-left carousel_control"></span></a>
-                <a data-slide="next" href="#newestCarousel" class="right"><span class="glyphicon glyphicon-chevron-right carousel_control"></span></a>
-            </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    <!--Newest organizations carousel-->
+                    <div id="newestCarousel" class="carousel slide" data-type="multi">
 
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="row">
-                <!--Newest organizations carousel-->
-                <div id="newestCarousel" class="carousel slide" data-type="multi">
-
-                    <!--Wrapper for slides-->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <div class="col-md-4">
-                                <div class="item-dim">
-                                    <a href="/userprofile/{{orgsfeatured.0.username}}">
-                                        <div class="carousel-caption customCaption">
-                                            <h4>{{orgsfeatured.0.displayname}}</h4>
-                                            <p  class="initialHidden">{{orgsfeatured.0.description}}</p>
-                                            <div class="btn btn-success initialHidden">Learn More</div>
-                                        </div>
-                                    </a>
-                                    <div class="thumbnail nopadding nomargin noborder">
-                                        <a href="/userprofile/{{orgsfeatured.0.username}}">
-                                            <img class="img-responsive host-featured-img" src="/uploads/{{orgsfeatured.0.profileimg}}" />
-                                        </a>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        {{#iterate orgsfeatured startCount="1"}}
-                            <div class="item">
+                        <!--Wrapper for slides-->
+                        <div class="carousel-inner">
+                            <div class="item active">
                                 <div class="col-md-4">
                                     <div class="item-dim">
-                                        <a href="/userprofile/{{this.username}}">
+                                        <a href="/userprofile/{{orgsfeatured.0.username}}">
                                             <div class="carousel-caption customCaption">
-                                                <h4>{{this.displayname}}</h4>
-                                                <p class=initialHidden>{{this.description}}</p>
+                                                <h4>{{orgsfeatured.0.displayname}}</h4>
+                                                <p  class="initialHidden">{{orgsfeatured.0.description}}</p>
                                                 <div class="btn btn-success initialHidden">Learn More</div>
                                             </div>
                                         </a>
                                         <div class="thumbnail nopadding nomargin noborder">
-                                            <a href="/userprofile/{{this.username}}"><img class="img-responsive host-featured-img" src="/uploads/{{this.profileimg}}" /></a>
+                                            <a href="/userprofile/{{orgsfeatured.0.username}}">
+                                                <img class="img-responsive host-featured-img" src="/uploads/{{orgsfeatured.0.profileimg}}" />
+                                            </a>
                                         </div>
                                     </div>
 
                                 </div>
                             </div>
 
-                        {{/iterate}}
-                    </div>
+                            {{#iterate orgsfeatured startCount="1"}}
+                                <div class="item">
+                                    <div class="col-md-4">
+                                        <div class="item-dim">
+                                            <a href="/userprofile/{{this.username}}">
+                                                <div class="carousel-caption customCaption">
+                                                    <h4>{{this.displayname}}</h4>
+                                                    <p class=initialHidden>{{this.description}}</p>
+                                                    <div class="btn btn-success initialHidden">Learn More</div>
+                                                </div>
+                                            </a>
+                                            <div class="thumbnail nopadding nomargin noborder">
+                                                <a href="/userprofile/{{this.username}}"><img class="img-responsive host-featured-img" src="/uploads/{{this.profileimg}}" /></a>
+                                            </div>
+                                        </div>
 
+                                    </div>
+                                </div>
+
+                            {{/iterate}}
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row header-row">
+            <div class="col-md-12 indexSectionHeader-col">
+                <div class="indexSectionHeader">
+                    <h2>Recent Feedback</h2>
                 </div>
             </div>
 
         </div>
-    </div>
-
-    <div class="row header-row">
-        <div class="col-md-12 indexSectionHeader-col">
-            <div class="indexSectionHeader">
-                <h2>Recent Feedback</h2>
-            </div>
-        </div>
-
-    </div>
-    <div class="row">
-        <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-12">
 
 
-            <svg class="feedbackSVG" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                <defs>
-                    <filter id="shadow">
-                        <feGaussianBlur in='SourceAlpha' stdDeviation='2.5' result='blur' />
-                        <feColorMatrix type="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 .35 0" result="blur"/>
-                        <feMerge>
-                            <feMergeNode in='blur'/>
-                            <feMergeNode in='SourceGraphic'/>
-                        </feMerge>
-                    </filter>
-                </defs>
+                <svg class="feedbackSVG" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="none">
+                    <defs>
+                        <filter id="shadow">
+                            <feGaussianBlur in='SourceAlpha' stdDeviation='2.5' result='blur' />
+                            <feColorMatrix type="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 .35 0" result="blur"/>
+                            <feMerge>
+                                <feMergeNode in='blur'/>
+                                <feMergeNode in='SourceGraphic'/>
+                            </feMerge>
+                        </filter>
+                    </defs>
 
-                <polygon points="0,0 100,0 100,90 8,90 4,100 5,90 0,90" vector-effect="non-scaling-stroke" fill="none" stroke="black" stroke-width=".5px"></polygon>
-                <!--<rect width="100%" height="260px"/>
-                <path d="M 10 260 l 30 0 -30 31 z"/>-->
+                    <polygon points="0,0 100,0 100,90 8,90 4,100 5,90 0,90" vector-effect="non-scaling-stroke" fill="none" stroke="black" stroke-width=".5px"></polygon>
+                    <!--<rect width="100%" height="260px"/>
+                    <path d="M 10 260 l 30 0 -30 31 z"/>-->
 
-            </svg>
+                </svg>
 
-            <div class="feedbackDiv">
-                {{#feedbackfeatured}}
-                    <div class="feedbackItem">
-                        <p>{{this.content}}</p>
-                        <a href="/userprofile/{{this.recipient_id.username}}">- {{this.recipient_id.displayname}}</a>
-                    </div>
-                {{/feedbackfeatured}}
-            </div>
-
-        </div>
-    </div>
-        <!--Top row side panel containing fast-facts/ motto/ statistics-->
-    <div class="row header-row">
-        <div class="col-md-12 indexSectionHeader-col">
-            <div class="indexSectionHeader">
-                <h2>Bulletin Board</h2>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel-group" id="accordion">
-                <div class="panel panel-default nomargin">
-                    <a href="#collapseOne" data-toggle="collapse" data-parent="#accordion">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">Connecting People</h4>
+                <div class="feedbackDiv">
+                    {{#feedbackfeatured}}
+                        <div class="feedbackItem">
+                            <p>{{this.content}}</p>
+                            <a href="/userprofile/{{this.recipient_id.username}}">- {{this.recipient_id.displayname}}</a>
                         </div>
-                    </a>
-
-                    <div class="panel-collapse collapse" id="collapseOne">
-                        <div class="panel-body">
-                            <p>VolunteerApp allows volunteers to search through volunteer opportunities posted by organizations
-                                around the world. Volunteer organizations can search through the database of volunteers to find those people with the skills
-                                they need!</p>
-                        </div>
-                    </div>
-
+                    {{/feedbackfeatured}}
                 </div>
 
-                <div class="panel panel-default nomargin">
-                    <a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">No Fees, No Problem!</h4>
+            </div>
+        </div>
+            <!--Top row side panel containing fast-facts/ motto/ statistics-->
+        <div class="row header-row">
+            <div class="col-md-12 indexSectionHeader-col">
+                <div class="indexSectionHeader">
+                    <h2>Bulletin Board</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel-group" id="accordion">
+                    <div class="panel panel-default nomargin">
+                        <a href="#collapseOne" data-toggle="collapse" data-parent="#accordion">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">Connecting People</h4>
+                            </div>
+                        </a>
+
+                        <div class="panel-collapse collapse" id="collapseOne">
+                            <div class="panel-body">
+                                <p>VolunteerApp allows volunteers to search through volunteer opportunities posted by organizations
+                                    around the world. Volunteer organizations can search through the database of volunteers to find those people with the skills
+                                    they need!</p>
+                            </div>
                         </div>
-                    </a>
-                    <div class="panel-collapse collapse" id="collapseTwo">
-                        <div class="panel-body">
-                            <p>VolunteerApp believes that volunteers should not need to pay in order to donate their time and effort
-                                to a good cause. In fact, one of the reasons that VA was formed was to cut out the middlemen, who often charge exorbitant amounts
-                                to setup volunteers in positions of need.</p>
+
+                    </div>
+
+                    <div class="panel panel-default nomargin">
+                        <a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">No Fees, No Problem!</h4>
+                            </div>
+                        </a>
+                        <div class="panel-collapse collapse" id="collapseTwo">
+                            <div class="panel-body">
+                                <p>VolunteerApp believes that volunteers should not need to pay in order to donate their time and effort
+                                    to a good cause. In fact, one of the reasons that VA was formed was to cut out the middlemen, who often charge exorbitant amounts
+                                    to setup volunteers in positions of need.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="panel panel-default nomargin">
-                    <a href="#collapseThree" data-toggle="collapse" data-parent="#accordion">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">Example Statement Here!</h4>
-                        </div>
-                    </a>
-                    <div class="panel-collapse collapse" id="collapseThree">
-                        <div class="panel-body">
-                            <p>An example statement will go here explaining the different ways to join the VolunteerApp website.
-                                It will talk about being a volunteer versus being an organization looking for helping hands.</p>
+                    <div class="panel panel-default nomargin">
+                        <a href="#collapseThree" data-toggle="collapse" data-parent="#accordion">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">Example Statement Here!</h4>
+                            </div>
+                        </a>
+                        <div class="panel-collapse collapse" id="collapseThree">
+                            <div class="panel-body">
+                                <p>An example statement will go here explaining the different ways to join the VolunteerApp website.
+                                    It will talk about being a volunteer versus being an organization looking for helping hands.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
