--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,7 +24,7 @@
                             <span class="icon-bar"></span>
                         </button>
                     </div>
-                    <div class="navbar-collapse collapse nopadding">
+                    <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
                             <li id="navItemIndex" class="active">
                                 <a href="/">Home</a>
@@ -65,7 +65,7 @@
 
         </div>
     </nav>
-    <div class="container-fluid templateContent">
+    <div class="templateContent">
         {{{body}}}
     </div>
 
