--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container">
     <a href="#bodyDiv-anchor"><span class="glyphicon glyphicon-chevron-down" id="jumbo_down"></span></a>
     <div id="bodyDiv-anchor"></div>
     <div class="container" id="bodyDiv" data-controller="index" data-action="{{user.role}}">
