--- a/views/index.hbs
+++ b/views/index.hbs
@@ -144,7 +144,7 @@
 
                         <div class="panel-collapse collapse" id="collapseOne">
                             <div class="panel-body">
-                                <p>VolunteerApp allows volunteers to search through volunteer opportunities posted by organizations
+                                <p>VolunteerApp allows individuals to search through volunteer opportunities posted by organizations
                                     around the world. Volunteer organizations can search through the database of volunteers to find those people with the skills
                                     they need!</p>
                             </div>
