--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
       <meta property="og:description" content="VolunteerApp allows individuals to search through volunteer opportunities posted by organizations
                                     around the world. We believe that volunteers should not need to pay in order to donate their time and effort
                                     to a good cause." />
-      <meta property="og:image" content="/images/logo_final.png"/>
+      <meta property="og:image" content="public/images/logo_final.png"/>
       <meta property="og:url" content="stormy-eyrie-32571.herokuapp.com" />
       <meta property="og:type" content="website" />
   </head>
