OG Image troubleshooting(2)

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,14 +9,14 @@
       <link rel='stylesheet' href='stylesheets/style.css' />
       <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Volunteer App" />
-      <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Helping enthusiastic volunteers connect with capable organizations across the globe." />
-      <meta prefix="og: http://ogp.me/ns#" property="og:description" content="VolunteerApp allows individuals to search through volunteer opportunities posted by organizations
+      <meta property="og:site_name" content="Volunteer App" />
+      <meta property="og:title" content="Helping enthusiastic volunteers connect with capable organizations across the globe." />
+      <meta property="og:description" content="VolunteerApp allows individuals to search through volunteer opportunities posted by organizations
                                     around the world. We believe that volunteers should not need to pay in order to donate their time and effort
                                     to a good cause." />
-      <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://stormy-eyrie-32571.herokuapp.com/images/logo_final.png"/>
-      <meta prefix="og: http://ogp.me/ns#" property="og:url" content="stormy-eyrie-32571.herokuapp.com" />
-      <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
+      <meta property="og:image" content="http://stormy-eyrie-32571.herokuapp.com/images/logo_final.png"/>
+      <meta property="og:url" content="stormy-eyrie-32571.herokuapp.com" />
+      <meta property="og:type" content="website" />
   </head>
   <body>
     <nav role="navigation" id="myNavBar" class="navbar navbar-fixed-top navbarCustom">
