--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta property="og:site_name" content="Volunteer App" />
+      <meta property="og:title" content="Helping enthusiastic volunteers connect with capable organizations across the globe." />
+      <meta property="og:description" content="VolunteerApp allows individuals to search through volunteer opportunities posted by organizations
+                                    around the world. We believe that volunteers should not need to pay in order to donate their time and effort
+                                    to a good cause.">
+      <meta property="og:image" content="http://stormy-eyrie-32571.herokuapp.com/images/logo_final.png"/>
+      <meta property="og:url" content="stormy-eyrie-32571.herokuapp.com" />
+      <meta property="og:type" content="website" />
+      <title>{{title}}</title>
       <script src="javascripts/underscore-min.js" type="text/javascript"></script>
       <script src="javascripts/jquery-1.11.3.min.js" type="text/javascript"></script>
       <script src="javascripts/bootstrap.min.js"></script>
       <link rel="stylesheet" href="stylesheets/bootstrap.min.css" />
       <link rel='stylesheet' href='stylesheets/style.css' />
       <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta property="og:site_name" content="Volunteer App" />
-      <meta property="og:title" content="Helping enthusiastic volunteers connect with capable organizations across the globe." />
-      <meta property="og:description" content="VolunteerApp allows individuals to search through volunteer opportunities posted by organizations
-                                    around the world. We believe that volunteers should not need to pay in order to donate their time and effort
-                                    to a good cause." />
-      <meta property="og:image" content="http://stormy-eyrie-32571.herokuapp.com/images/logo_final.png"/>
-      <meta property="og:url" content="stormy-eyrie-32571.herokuapp.com" />
-      <meta property="og:type" content="website" />
   </head>
   <body>
     <nav role="navigation" id="myNavBar" class="navbar navbar-fixed-top navbarCustom">
