OG Image troubleshooting(4)

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
       <meta property="og:title" content="Helping enthusiastic volunteers connect with capable organizations across the globe." />
       <meta property="og:description" content="VolunteerApp allows individuals to search through volunteer opportunities posted by organizations
                                     around the world. We believe that volunteers should not need to pay in order to donate their time and effort
-                                    to a good cause.">
+                                    to a good cause." />
       <meta property="og:image" content="http://stormy-eyrie-32571.herokuapp.com/images/logo_final.png"/>
       <meta property="og:url" content="stormy-eyrie-32571.herokuapp.com" />
       <meta property="og:type" content="website" />
