Added tinymce.js for dashboard profile description textarea

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,6 +17,7 @@
       <link rel="stylesheet" href="stylesheets/bootstrap.min.css" />
       <link rel='stylesheet' href='stylesheets/style.css' />
       <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+      <script src='https://cdn.tinymce.com/4/tinymce.min.js'></script>
   </head>
   <body>
     <nav role="navigation" id="myNavBar" class="navbar navbar-fixed-top navbarCustom">
