Added options (maxFileSize, maxFiles, acceptedFiles) to dropzone within client-app.js (common-init) Removed leftover bootstrap styling of :active nav items

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,8 +82,8 @@ textarea{
     margin:0;
 }
 
-.nav li>a:hover, .nav li>a:active {
-    background: none;
+.nav li>a:hover, .nav li>a:active, .nav li>a:visited {
+    background: white;
 }
 
 .nav .active::after, .nav li:hover::after {
