--- a/views/index.hbs
+++ b/views/index.hbs
@@ -41,7 +41,7 @@
                                         <a href="/userprofile/{{orgsfeatured.0.username}}">
                                             <div class="carousel-caption customCaption">
                                                 <h4>{{orgsfeatured.0.displayname}}</h4>
-                                                <p  class="initialHidden">{{orgsfeatured.0.description}}</p>
+                                                <pre class="initialHidden preUserInput">{{{orgsfeatured.0.description}}}</pre>
                                                 <div class="btn btn-success initialHidden">Learn More</div>
                                             </div>
                                         </a>
@@ -62,7 +62,7 @@
                                             <a href="/userprofile/{{this.username}}">
                                                 <div class="carousel-caption customCaption">
                                                     <h4>{{this.displayname}}</h4>
-                                                    <p class=initialHidden>{{this.description}}</p>
+                                                    <pre class="initialHidden preUserInput">{{this.description}}</pre>
                                                     <div class="btn btn-success initialHidden">Learn More</div>
                                                 </div>
                                             </a>
