--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,7 +15,7 @@
                     <form action="/login" role="form" method="post">
                         <div class="form-group">
                             <label class="control-label" for="loginUser">Username:</label>
-                            <input type="text" class="form-control" name="username" id="loginUser" placeholder="Username" />
+                            <input type="text" class="form-control" name="username" id="loginUser" placeholder="Username" autofocus/>
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="loginPass">Password:</label>
